--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="w-full">
                 <h1 class="text-4xl font-extrabold text-[#61DAFB] mb-8">Studypedia</h1>
                 <p class="text-sm text-gray-400 mb-8">
-                    Your personal learning companion for students of Uganda!
+                    Your personal learning companion for pharmacy students of Uganda!
                 </p>
                 <button id="login-signup-btn" class="w-full py-3 px-6 rounded-xl font-bold bg-[#61DAFB] text-gray-900 shadow-lg hover:shadow-xl transition duration-300 transform hover:scale-105">
                     Login / Signup
@@ -117,13 +117,13 @@
         <div class="flex-1 flex flex-col items-center p-8 text-center">
             <div id="content-display" class="w-full max-w-2xl">
                 <h2 class="text-5xl md:text-6xl font-extrabold text-white mb-4 leading-tight">
-                    Welcome to Studypedia
+                    Welcome to Studypedia uganda
                 </h2>
                 <h3 class="text-3xl md:text-4xl font-semibold text-[#61DAFB] mb-6">
                     Students of pharmacy uganda!
                 </h3>
                 <p class="text-base md:text-lg text-gray-400 max-w-2xl mb-8">
-                    Find and share study notes, past papers, and educational resources with fellow students.
+                    Find and share study notes, past papers, and educational resources with fellow students in the pharmacy profession.
                 </p>
                 <div id="content-container">
                     <!-- Dynamic content will be loaded here -->
