--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Studypedia pharmacy students</title>
     <!-- Google AdSense Script -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9651439714273887"
-     crossorigin="anonymous"></script>
+      crossorigin="anonymous"></script>
     <!-- Use Tailwind CSS for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Use Phosphor Icons for a clean look -->
@@ -79,6 +79,30 @@
             margin-bottom: 1rem;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
             transition: transform 0.2s;
+            position: relative;
+        }
+
+        .options-menu {
+            position: absolute;
+            top: 1.5rem;
+            right: 1.5rem;
+            background-color: #333;
+            border-radius: 0.5rem;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
+            z-index: 10;
+            min-width: 120px;
+        }
+
+        .options-menu-item {
+            padding: 0.75rem 1rem;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .options-menu-item:hover {
+            background-color: #444;
         }
     </style>
 </head>
@@ -107,10 +131,12 @@
                     <p class="text-sm font-semibold">Logged in as:</p>
                     <p id="user-email" class="text-sm font-medium break-all"></p>
                 </div>
-            </div>
-            <!-- AdSense ad unit placeholder -->
-            <div class="w-full text-center text-gray-500 text-xs">
-                <p>Google AdSense - Sidebar Ad</p>
+                <!-- AdSense ad unit placeholder for the sidebar -->
+                <div class="w-full text-center text-gray-500 text-xs mt-8">
+                    <p>Google AdSense - Sidebar Ad</p>
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9651439714273887"
+     crossorigin="anonymous"></script>
+                </div>
             </div>
         </div>
 
@@ -126,6 +152,13 @@
                 <p class="text-base md:text-lg text-gray-400 max-w-2xl mb-8">
                     Find and share study notes, past papers, and educational resources with fellow students in the pharmacy profession.
                 </p>
+                <!-- START OF AD UNIT PLACEHOLDER -->
+                <div class="my-8">
+                    <p class="text-gray-500 text-sm italic">AdSense Ad Unit Placeholder</p>
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9651439714273887"
+     crossorigin="anonymous"></script>
+                </div>
+                <!-- END OF AD UNIT PLACEHOLDER -->
                 <div id="content-container">
                     <!-- Dynamic content will be loaded here -->
                     <p id="loading-message" class="loading">Please log in to view resources.</p>
@@ -226,6 +259,19 @@
         </div>
     </div>
 
+    <!-- Custom Delete Confirmation Modal -->
+    <div id="confirm-delete-modal" class="modal-overlay">
+        <div class="modal text-center">
+            <h3 class="text-xl font-semibold mb-4 text-white">Confirm Deletion</h3>
+            <p class="text-gray-400 mb-6">Are you sure you want to delete this resource? This action cannot be undone.</p>
+            <div class="flex justify-center space-x-4">
+                <button id="confirm-delete-btn" class="py-2 px-6 rounded-xl font-bold bg-red-500 text-white shadow-lg hover:bg-red-600 transition duration-300">Delete</button>
+                <button id="cancel-delete-btn" class="py-2 px-6 rounded-xl font-bold bg-gray-500 text-gray-900 shadow-lg hover:bg-gray-400 transition duration-300">Cancel</button>
+            </div>
+        </div>
+    </div>
+
+
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
         import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
@@ -252,6 +298,9 @@
         const authModal = document.getElementById('auth-modal');
         const addResourceModal = document.getElementById('add-resource-modal');
         const editResourceModal = document.getElementById('edit-resource-modal');
+        const confirmDeleteModal = document.getElementById('confirm-delete-modal');
+        const confirmDeleteBtn = document.getElementById('confirm-delete-btn');
+        const cancelDeleteBtn = document.getElementById('cancel-delete-btn');
         const closeModalAuthBtn = document.getElementById('close-modal-auth');
         const closeModalAddBtn = document.getElementById('close-modal-add');
         const closeModalEditBtn = document.getElementById('close-modal-edit');
@@ -319,11 +368,18 @@
             }
         };
 
-        const attachEditAndDeleteListeners = (user) => {
-            const editButtons = document.querySelectorAll('.edit-btn');
-            const deleteButtons = document.querySelectorAll('.delete-btn');
+        const attachEventListeners = (user) => {
+            document.querySelectorAll('.options-btn').forEach(button => {
+                button.addEventListener('click', (e) => {
+                    e.stopPropagation(); // Prevents the card click listener from firing
+                    const menu = button.nextElementSibling;
+                    if (menu) {
+                        menu.classList.toggle('hidden');
+                    }
+                });
+            });
 
-            editButtons.forEach(button => {
+            document.querySelectorAll('.edit-option').forEach(button => {
                 button.addEventListener('click', () => {
                     const docId = button.dataset.docId;
                     const card = button.closest('.card');
@@ -339,11 +395,12 @@
                 });
             });
 
-            deleteButtons.forEach(button => {
+            document.querySelectorAll('.delete-option').forEach(button => {
                 button.addEventListener('click', async () => {
                     const docId = button.dataset.docId;
-                    const confirmed = confirm("Are you sure you want to delete this resource?");
-                    if (confirmed) {
+                    confirmDeleteModal.style.display = 'flex';
+                    
+                    const handleConfirm = async () => {
                         try {
                             const docRef = doc(db, "DIPLOMA_PHARMACY", docId);
                             await deleteDoc(docRef);
@@ -351,7 +408,29 @@
                         } catch (error) {
                             console.error("Error deleting document: ", error);
                             displayMessage(`Error deleting resource: ${error.message}`, true, 'edit');
+                        } finally {
+                            confirmDeleteModal.style.display = 'none';
+                            confirmDeleteBtn.removeEventListener('click', handleConfirm);
+                            cancelDeleteBtn.removeEventListener('click', handleCancel);
                         }
+                    };
+
+                    const handleCancel = () => {
+                        confirmDeleteModal.style.display = 'none';
+                        confirmDeleteBtn.removeEventListener('click', handleConfirm);
+                        cancelDeleteBtn.removeEventListener('click', handleCancel);
+                    };
+
+                    confirmDeleteBtn.addEventListener('click', handleConfirm);
+                    cancelDeleteBtn.addEventListener('click', handleCancel);
+                });
+            });
+
+            // Close all menus when clicking anywhere else on the document
+            document.addEventListener('click', (e) => {
+                document.querySelectorAll('.options-menu').forEach(menu => {
+                    if (!menu.classList.contains('hidden') && !menu.contains(e.target) && !e.target.closest('.options-btn')) {
+                        menu.classList.add('hidden');
                     }
                 });
             });
@@ -376,26 +455,37 @@
                     const isOwner = user && data.createdBy === user.uid;
                     htmlContent += `
                         <div class="card bg-[#242424] p-6 rounded-xl shadow-lg hover:shadow-2xl transition-all duration-300">
-                            <h3 class="text-2xl font-semibold mb-2 text-white">${data.title}</h3>
-                            <p class="text-gray-400 mb-4">${data.content}</p>
-                            <div class="flex justify-between items-center mt-4">
-                                ${data.download_url ? `<a href="${data.download_url}" target="_blank" class="text-[#61DAFB] hover:underline">Download Resource</a>` : ''}
+                            <div class="flex justify-between items-start">
+                                <div>
+                                    <h3 class="text-2xl font-semibold mb-2 text-white">${data.title}</h3>
+                                    <p class="text-gray-400 mb-4">${data.content}</p>
+                                </div>
                                 ${isOwner ? `
-                                    <div class="flex space-x-2">
-                                        <button class="edit-btn text-yellow-500 hover:text-yellow-400" data-doc-id="${doc.id}">
-                                            <i class="ph-bold ph-pencil text-xl"></i>
+                                    <div class="relative">
+                                        <button class="options-btn text-gray-400 hover:text-white transition-colors duration-200">
+                                            <i class="ph-bold ph-dots-three-vertical text-2xl"></i>
                                         </button>
-                                        <button class="delete-btn text-red-500 hover:text-red-400" data-doc-id="${doc.id}">
-                                            <i class="ph-bold ph-trash text-xl"></i>
-                                        </button>
+                                        <div class="options-menu hidden absolute right-0 mt-2 bg-[#333] rounded-md shadow-lg py-1">
+                                            <a class="options-menu-item hover:bg-gray-700 rounded-md text-gray-200 edit-option" data-doc-id="${doc.id}">
+                                                <i class="ph-bold ph-pencil"></i>
+                                                <span>Edit</span>
+                                            </a>
+                                            <a class="options-menu-item hover:bg-gray-700 rounded-md text-gray-200 delete-option" data-doc-id="${doc.id}">
+                                                <i class="ph-bold ph-trash"></i>
+                                                <span>Delete</span>
+                                            </a>
+                                        </div>
                                     </div>
                                 ` : ''}
+                            </div>
+                            <div class="flex justify-between items-center mt-4">
+                                ${data.download_url ? `<a href="${data.download_url}" target="_blank" class="text-[#61DAFB] hover:underline">Download Resource</a>` : ''}
                             </div>
                         </div>
                     `;
                 });
                 contentContainer.innerHTML = htmlContent;
-                attachEditAndDeleteListeners(user);
+                attachEventListeners(user);
             }, (error) => {
                 console.error("Error fetching documents: ", error);
                 contentContainer.innerHTML = `<p class="error-message">Error fetching data: ${error.message}</p>`;
@@ -551,5 +641,3 @@
     </script>
 </body>
 </html>
-
-
