Update index.html with essentials

--- a/index.html
+++ b/index.html
@@ -638,5 +638,20 @@
             });
         });
     </script>
+    <footer class="w-full bg-[#1a1a1a] p-8 mt-12 text-center text-gray-400">
+    <div class="container mx-auto">
+        <div class="flex flex-wrap justify-center space-x-6 mb-4">
+            <a href="#about" class="hover:text-[#61DAFB] transition-colors">About Us</a>
+            <a href="#privacy" class="hover:text-[#61DAFB] transition-colors">Privacy Policy</a>
+            <a href="#terms" class="hover:text-[#61DAFB] transition-colors">Terms and Conditions</a>
+        </div>
+        <div class="text-sm">
+            <p>Contact Us:</p>
+            <p>Phone: +256756454646</p>
+            <p>Email: <a href="mailto:kaigwaakram123@gmail.com" class="hover:underline">kaigwaakram123@gmail.com</a></p>
+        </div>
+        <p class="mt-4 text-xs">&copy; 2025 Studypedia. All Rights Reserved.</p>
+    </div>
+</footer>
 </body>
 </html>
