--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <header class="py-4 px-8 flex justify-between items-center bg-[#1e1e1e] shadow-lg">
         <div class="flex items-center">
             <h1 class="text-3xl font-bold text-white">Studypedia</h1>
-            <p class="text-gray-400 ml-4">Your personal learning companion for pharmacy students of Uganda!</p>
+            <p class="text-gray-400 ml-4">Your personal learning companion for medical students of Uganda!</p>
         </div>
         <div class="flex items-center space-x-4">
             <button id="add-resource-btn" class="hidden py-2 px-4 rounded-xl font-bold bg-[#3a3a3a] text-white hover:bg-[#4a4a4a] transition duration-300">Add Resource</button>
@@ -84,7 +84,7 @@
     <main class="container mx-auto px-4 py-8 max-w-7xl">
         <div class="bg-[#1e1e1e] p-8 rounded-2xl shadow-xl text-center">
             <h2 class="text-4xl font-bold mb-4 text-white">Welcome to Studypedia Uganda</h2>
-            <p class="text-lg text-shine-purple font-semibold mb-6">Your hub for pharmacy resources!</p>
+            <p class="text-lg text-shine-purple font-semibold mb-6">Your hub for medical resources!</p>
             <p class="text-gray-400 max-w-2xl mx-auto">Select a field of study, then a semester, and finally a course unit to access valuable learning materials.</p>
         </div>
 
