--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -170,6 +168,93 @@
         </div>
     </div>
 
+    <!-- Add Resource Modal -->
+    <div id="add-resource-modal" class="modal-overlay hidden">
+        <div class="modal-content relative text-white">
+            <button id="close-modal-add" class="modal-close-btn"><i class="ph-bold ph-x text-2xl"></i></button>
+            <h2 class="text-2xl font-bold mb-6 text-center">Add Resource</h2>
+            <form id="add-resource-form" class="space-y-4">
+                <select id="resource-field" class="w-full py-2 px-4 rounded-lg bg-[#333] border border-[#555] text-white"></select>
+                <select id="resource-semester" class="w-full py-2 px-4 rounded-lg bg-[#333] border border-[#555] text-white"></select>
+                <select id="resource-course-unit" class="w-full py-2 px-4 rounded-lg bg-[#333] border border-[#555] text-white"></select>
+                <input id="resource-title" class="w-full py-2 px-4 rounded-lg bg-[#333] border border-[#555] text-white" placeholder="Title" required />
+                <textarea id="resource-content" class="w-full py-2 px-4 rounded-lg bg-[#333] border border-[#555] text-white" placeholder="Description"></textarea>
+                <input id="resource-url" class="w-full py-2 px-4 rounded-lg bg-[#333] border border-[#555] text-white" placeholder="Download URL (optional)" />
+                <div id="message-box-add" class="hidden px-4 py-2 rounded-lg text-center"><p id="message-text-add"></p></div>
+                <button type="submit" id="add-resource-submit-btn" class="w-full py-3 rounded-xl font-bold bg-shine-blue text-gray-900 shadow-lg hover:bg-[#52c1da] transition duration-300">Add Resource</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Edit Resource Modal -->
+    <div id="edit-resource-modal" class="modal-overlay hidden">
+        <div class="modal-content relative text-white">
+            <button id="close-modal-edit" class="modal-close-btn"><i class="ph-bold ph-x text-2xl"></i></button>
+            <h2 class="text-2xl font-bold mb-6 text-center">Edit Resource</h2>
+            <form id="edit-resource-form" class="space-y-4">
+                <select id="edit-resource-field" class="w-full py-2 px-4 rounded-lg bg-[#333] border border-[#555] text-white"></select>
+                <select id="edit-resource-semester" class="w-full py-2 px-4 rounded-lg bg-[#333] border border-[#555] text-white"></select>
+                <select id="edit-resource-course-unit" class="w-full py-2 px-4 rounded-lg bg-[#333] border border-[#555] text-white"></select>
+                <input id="edit-resource-title" class="w-full py-2 px-4 rounded-lg bg-[#333] border border-[#555] text-white" placeholder="Title" required />
+                <textarea id="edit-resource-content" class="w-full py-2 px-4 rounded-lg bg-[#333] border border-[#555] text-white" placeholder="Description"></textarea>
+                <input id="edit-resource-url" class="w-full py-2 px-4 rounded-lg bg-[#333] border border-[#555] text-white" placeholder="Download URL (optional)" />
+                <input type="hidden" id="edit-doc-id" />
+                <div id="message-box-edit" class="hidden px-4 py-2 rounded-lg text-center"><p id="message-text-edit"></p></div>
+                <button type="submit" id="edit-resource-submit-btn" class="w-full py-3 rounded-xl font-bold bg-shine-blue text-gray-900 shadow-lg hover:bg-[#52c1da] transition duration-300">Save Changes</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Confirm Delete Modal -->
+    <div id="confirm-delete-modal" class="modal-overlay hidden">
+        <div class="modal-content relative text-white text-center">
+            <h2 class="text-2xl font-bold mb-6">Confirm Delete</h2>
+            <p>Are you sure you want to delete this resource?</p>
+            <div class="flex justify-center gap-4 mt-6">
+                <button id="confirm-delete-btn" class="py-2 px-6 rounded-xl font-bold bg-red-500 text-white hover:bg-red-600 transition duration-300">Delete</button>
+                <button id="cancel-delete-btn" class="py-2 px-6 rounded-xl font-bold bg-gray-500 text-white hover:bg-gray-600 transition duration-300">Cancel</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Admin Panel Modal -->
+    <div id="admin-panel-modal" class="modal-overlay hidden">
+        <div class="modal-content relative text-white max-w-2xl">
+            <button id="close-admin-panel-modal" class="modal-close-btn"><i class="ph-bold ph-x text-2xl"></i></button>
+            <h2 class="text-2xl font-bold mb-6 text-center">Admin Panel</h2>
+            <div>
+                <h3 class="text-xl font-semibold mb-2">Fields</h3>
+                <div id="admin-fields-list" class="mb-4"></div>
+                <form id="add-field-form" class="flex gap-2 mb-4">
+                    <input id="new-field-name" class="py-2 px-4 rounded-lg bg-[#333] border border-[#555] text-white" placeholder="New Field Name" required />
+                    <button type="submit" class="py-2 px-4 rounded-xl font-bold bg-shine-blue text-gray-900">Add Field</button>
+                </form>
+                <div id="message-box-admin-field" class="hidden px-4 py-2 rounded-lg text-center"><p id="message-text-admin-field"></p></div>
+            </div>
+            <div class="mt-8">
+                <h3 class="text-xl font-semibold mb-2">Semesters</h3>
+                <select id="admin-semester-field-select" class="w-full py-2 px-4 rounded-lg bg-[#333] border border-[#555] text-white mb-2"></select>
+                <form id="add-semester-form" class="flex gap-2 mb-4">
+                    <input id="new-semester-name" class="py-2 px-4 rounded-lg bg-[#333] border border-[#555] text-white" placeholder="New Semester Name" required />
+                    <button type="submit" class="py-2 px-4 rounded-xl font-bold bg-shine-blue text-gray-900">Add Semester</button>
+                </form>
+                <div id="admin-semesters-list" class="mb-4"></div>
+                <div id="message-box-admin-semester" class="hidden px-4 py-2 rounded-lg text-center"><p id="message-text-admin-semester"></p></div>
+            </div>
+            <div class="mt-8">
+                <h3 class="text-xl font-semibold mb-2">Course Units</h3>
+                <select id="admin-course-unit-field-select" class="w-full py-2 px-4 rounded-lg bg-[#333] border border-[#555] text-white mb-2"></select>
+                <select id="admin-course-unit-semester-select" class="w-full py-2 px-4 rounded-lg bg-[#333] border border-[#555] text-white mb-2"></select>
+                <form id="add-course-unit-form" class="flex gap-2 mb-4">
+                    <input id="new-course-unit-name" class="py-2 px-4 rounded-lg bg-[#333] border border-[#555] text-white" placeholder="New Course Unit Name" required />
+                    <button type="submit" class="py-2 px-4 rounded-xl font-bold bg-shine-blue text-gray-900">Add Course Unit</button>
+                </form>
+                <div id="admin-course-units-list" class="mb-4"></div>
+                <div id="message-box-admin-course-unit" class="hidden px-4 py-2 rounded-lg text-center"><p id="message-text-admin-course-unit"></p></div>
+            </div>
+        </div>
+    </div>
+
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
         import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
@@ -188,6 +273,9 @@
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
         const db = getFirestore(app);
+
+        // Add event listener for toggling login/signup mode
+        document.getElementById('toggle-auth-mode').addEventListener('click', toggleAuthMode);
 
         // --- UI Element References ---
         const loginSignupBtn = document.getElementById('login-signup-btn');
